@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2006 the original author or authors.
+ * Copyright 2002-2018 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,67 +16,134 @@
 
 package org.springframework.util;
 
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
-
 import java.io.IOException;
 import java.sql.SQLException;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Set;
 
-import junit.framework.TestCase;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.ExpectedException;
 
-import org.springframework.core.task.TaskRejectedException;
+import static org.hamcrest.CoreMatchers.*;
+import static org.junit.Assert.*;
+import static org.springframework.util.ObjectUtils.*;
 
 /**
+ * Unit tests for {@link ObjectUtils}.
+ *
  * @author Rod Johnson
  * @author Juergen Hoeller
  * @author Rick Evans
+ * @author Sam Brannen
  */
-public final class ObjectUtilsTests extends TestCase {
+public class ObjectUtilsTests {
 
-	public void testIsCheckedException() {
+	@Rule
+	public final ExpectedException exception = ExpectedException.none();
+
+	@Test
+	public void isCheckedException() {
 		assertTrue(ObjectUtils.isCheckedException(new Exception()));
 		assertTrue(ObjectUtils.isCheckedException(new SQLException()));
 
 		assertFalse(ObjectUtils.isCheckedException(new RuntimeException()));
-		assertFalse(ObjectUtils.isCheckedException(new TaskRejectedException("")));
+		assertFalse(ObjectUtils.isCheckedException(new IllegalArgumentException("")));
 
 		// Any Throwable other than RuntimeException and Error
 		// has to be considered checked according to the JLS.
 		assertTrue(ObjectUtils.isCheckedException(new Throwable()));
 	}
 
-	public void testIsCompatibleWithThrowsClause() {
-		Class<?>[] empty = new Class[0];
-		Class<?>[] exception = new Class[] {Exception.class};
-		Class<?>[] sqlAndIO = new Class[] {SQLException.class, IOException.class};
-		Class<?>[] throwable = new Class[] {Throwable.class};
+	@Test
+	public void isCompatibleWithThrowsClause() {
+		Class<?>[] empty = new Class<?>[0];
+		Class<?>[] exception = new Class<?>[] {Exception.class};
+		Class<?>[] sqlAndIO = new Class<?>[] {SQLException.class, IOException.class};
+		Class<?>[] throwable = new Class<?>[] {Throwable.class};
 
-		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), null));
+		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException()));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), empty));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), exception));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), sqlAndIO));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new RuntimeException(), throwable));
 
-		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Exception(), null));
+		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Exception()));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Exception(), empty));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new Exception(), exception));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Exception(), sqlAndIO));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new Exception(), throwable));
 
-		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new SQLException(), null));
+		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new SQLException()));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new SQLException(), empty));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new SQLException(), exception));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new SQLException(), sqlAndIO));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new SQLException(), throwable));
 
-		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Throwable(), null));
+		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Throwable()));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Throwable(), empty));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Throwable(), exception));
 		assertFalse(ObjectUtils.isCompatibleWithThrowsClause(new Throwable(), sqlAndIO));
 		assertTrue(ObjectUtils.isCompatibleWithThrowsClause(new Throwable(), throwable));
 	}
 
-	public void testToObjectArray() {
+	@Test
+	public void isEmptyNull() {
+		assertTrue(isEmpty(null));
+	}
+
+	@Test
+	public void isEmptyArray() {
+		assertTrue(isEmpty(new char[0]));
+		assertTrue(isEmpty(new Object[0]));
+		assertTrue(isEmpty(new Integer[0]));
+
+		assertFalse(isEmpty(new int[] { 42 }));
+		assertFalse(isEmpty(new Integer[] { 42 }));
+	}
+
+	@Test
+	public void isEmptyCollection() {
+		assertTrue(isEmpty(Collections.emptyList()));
+		assertTrue(isEmpty(Collections.emptySet()));
+
+		Set<String> set = new HashSet<>();
+		set.add("foo");
+		assertFalse(isEmpty(set));
+		assertFalse(isEmpty(Arrays.asList("foo")));
+	}
+
+	@Test
+	public void isEmptyMap() {
+		assertTrue(isEmpty(Collections.emptyMap()));
+
+		HashMap<String, Object> map = new HashMap<>();
+		map.put("foo", 42L);
+		assertFalse(isEmpty(map));
+	}
+
+	@Test
+	public void isEmptyCharSequence() {
+		assertTrue(isEmpty(new StringBuilder()));
+		assertTrue(isEmpty(""));
+
+		assertFalse(isEmpty(new StringBuilder("foo")));
+		assertFalse(isEmpty("   "));
+		assertFalse(isEmpty("\t"));
+		assertFalse(isEmpty("foo"));
+	}
+
+	@Test
+	public void isEmptyUnsupportedObjectType() {
+		assertFalse(isEmpty(42L));
+		assertFalse(isEmpty(new Object()));
+	}
+
+	@Test
+	public void toObjectArray() {
 		int[] a = new int[] {1, 2, 3, 4, 5};
 		Integer[] wrapper = (Integer[]) ObjectUtils.toObjectArray(a);
 		assertTrue(wrapper.length == 5);
@@ -85,33 +152,34 @@ public final class ObjectUtilsTests extends TestCase {
 		}
 	}
 
-	public void testToObjectArrayWithNull() {
+	@Test
+	public void toObjectArrayWithNull() {
 		Object[] objects = ObjectUtils.toObjectArray(null);
 		assertNotNull(objects);
 		assertEquals(0, objects.length);
 	}
 
-	public void testToObjectArrayWithEmptyPrimitiveArray() {
+	@Test
+	public void toObjectArrayWithEmptyPrimitiveArray() {
 		Object[] objects = ObjectUtils.toObjectArray(new byte[] {});
 		assertNotNull(objects);
 		assertEquals(0, objects.length);
 	}
 
-	public void testToObjectArrayWithNonArrayType() {
-		try {
-			ObjectUtils.toObjectArray("Not an []");
-			fail("Must have thrown an IllegalArgumentException by this point.");
-		}
-		catch (IllegalArgumentException expected) {
-		}
+	@Test
+	public void toObjectArrayWithNonArrayType() {
+		exception.expect(IllegalArgumentException.class);
+		ObjectUtils.toObjectArray("Not an []");
 	}
 
-	public void testToObjectArrayWithNonPrimitiveArray() {
+	@Test
+	public void toObjectArrayWithNonPrimitiveArray() {
 		String[] source = new String[] {"Bingo"};
-		assertEquals(source, ObjectUtils.toObjectArray(source));
+		assertArrayEquals(source, ObjectUtils.toObjectArray(source));
 	}
 
-	public void testAddObjectToArraySunnyDay() {
+	@Test
+	public void addObjectToArraySunnyDay() {
 		String[] array = new String[] {"foo", "bar"};
 		String newElement = "baz";
 		Object[] newArray = ObjectUtils.addObjectToArray(array, newElement);
@@ -119,7 +187,8 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(newElement, newArray[2]);
 	}
 
-	public void testAddObjectToArrayWhenEmpty() {
+	@Test
+	public void addObjectToArrayWhenEmpty() {
 		String[] array = new String[0];
 		String newElement = "foo";
 		String[] newArray = ObjectUtils.addObjectToArray(array, newElement);
@@ -127,7 +196,8 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(newElement, newArray[0]);
 	}
 
-	public void testAddObjectToSingleNonNullElementArray() {
+	@Test
+	public void addObjectToSingleNonNullElementArray() {
 		String existingElement = "foo";
 		String[] array = new String[] {existingElement};
 		String newElement = "bar";
@@ -137,7 +207,8 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(newElement, newArray[1]);
 	}
 
-	public void testAddObjectToSingleNullElementArray() {
+	@Test
+	public void addObjectToSingleNullElementArray() {
 		String[] array = new String[] {null};
 		String newElement = "bar";
 		String[] newArray = ObjectUtils.addObjectToArray(array, newElement);
@@ -146,144 +217,180 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(newElement, newArray[1]);
 	}
 
-	public void testAddObjectToNullArray() throws Exception {
+	@Test
+	public void addObjectToNullArray() throws Exception {
 		String newElement = "foo";
 		String[] newArray = ObjectUtils.addObjectToArray(null, newElement);
 		assertEquals(1, newArray.length);
 		assertEquals(newElement, newArray[0]);
 	}
 
-	public void testAddNullObjectToNullArray() throws Exception {
+	@Test
+	public void addNullObjectToNullArray() throws Exception {
 		Object[] newArray = ObjectUtils.addObjectToArray(null, null);
 		assertEquals(1, newArray.length);
 		assertEquals(null, newArray[0]);
 	}
 
-	public void testNullSafeEqualsWithArrays() throws Exception {
+	@Test
+	public void nullSafeEqualsWithArrays() throws Exception {
 		assertTrue(ObjectUtils.nullSafeEquals(new String[] {"a", "b", "c"}, new String[] {"a", "b", "c"}));
 		assertTrue(ObjectUtils.nullSafeEquals(new int[] {1, 2, 3}, new int[] {1, 2, 3}));
 	}
 
-	public void testHashCodeWithBooleanFalse() {
+	@Test
+	@Deprecated
+	public void hashCodeWithBooleanFalse() {
 		int expected = Boolean.FALSE.hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(false));
 	}
 
-	public void testHashCodeWithBooleanTrue() {
+	@Test
+	@Deprecated
+	public void hashCodeWithBooleanTrue() {
 		int expected = Boolean.TRUE.hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(true));
 	}
 
-	public void testHashCodeWithDouble() {
+	@Test
+	@Deprecated
+	public void hashCodeWithDouble() {
 		double dbl = 9830.43;
 		int expected = (new Double(dbl)).hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(dbl));
 	}
 
-	public void testHashCodeWithFloat() {
+	@Test
+	@Deprecated
+	public void hashCodeWithFloat() {
 		float flt = 34.8f;
 		int expected = (new Float(flt)).hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(flt));
 	}
 
-	public void testHashCodeWithLong() {
+	@Test
+	@Deprecated
+	public void hashCodeWithLong() {
 		long lng = 883l;
 		int expected = (new Long(lng)).hashCode();
 		assertEquals(expected, ObjectUtils.hashCode(lng));
 	}
 
-	public void testIdentityToString() {
+	@Test
+	public void identityToString() {
 		Object obj = new Object();
 		String expected = obj.getClass().getName() + "@" + ObjectUtils.getIdentityHexString(obj);
 		String actual = ObjectUtils.identityToString(obj);
-		assertEquals(expected.toString(), actual);
+		assertEquals(expected, actual);
 	}
 
-	public void testIdentityToStringWithNullObject() {
+	@Test
+	public void identityToStringWithNullObject() {
 		assertEquals("", ObjectUtils.identityToString(null));
 	}
 
-	public void testIsArrayOfPrimitivesWithBooleanArray() {
+	@Test
+	public void isArrayOfPrimitivesWithBooleanArray() {
 		assertTrue(ClassUtils.isPrimitiveArray(boolean[].class));
 	}
 
-	public void testIsArrayOfPrimitivesWithObjectArray() {
+	@Test
+	public void isArrayOfPrimitivesWithObjectArray() {
 		assertFalse(ClassUtils.isPrimitiveArray(Object[].class));
 	}
 
-	public void testIsArrayOfPrimitivesWithNonArray() {
+	@Test
+	public void isArrayOfPrimitivesWithNonArray() {
 		assertFalse(ClassUtils.isPrimitiveArray(String.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithBooleanPrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithBooleanPrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(boolean.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithBooleanWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithBooleanWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Boolean.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithBytePrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithBytePrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(byte.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithByteWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithByteWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Byte.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithCharacterClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithCharacterClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Character.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithCharClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithCharClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(char.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithDoublePrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithDoublePrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(double.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithDoubleWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithDoubleWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Double.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithFloatPrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithFloatPrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(float.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithFloatWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithFloatWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Float.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithIntClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithIntClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(int.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithIntegerClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithIntegerClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Integer.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithLongPrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithLongPrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(long.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithLongWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithLongWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Long.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithNonPrimitiveOrWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithNonPrimitiveOrWrapperClass() {
 		assertFalse(ClassUtils.isPrimitiveOrWrapper(Object.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithShortPrimitiveClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithShortPrimitiveClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(short.class));
 	}
 
-	public void testIsPrimitiveOrWrapperWithShortWrapperClass() {
+	@Test
+	public void isPrimitiveOrWrapperWithShortWrapperClass() {
 		assertTrue(ClassUtils.isPrimitiveOrWrapper(Short.class));
 	}
 
-	public void testNullSafeHashCodeWithBooleanArray() {
+	@Test
+	public void nullSafeHashCodeWithBooleanArray() {
 		int expected = 31 * 7 + Boolean.TRUE.hashCode();
 		expected = 31 * expected + Boolean.FALSE.hashCode();
 
@@ -293,11 +400,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithBooleanArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithBooleanArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((boolean[]) null));
 	}
 
-	public void testNullSafeHashCodeWithByteArray() {
+	@Test
+	public void nullSafeHashCodeWithByteArray() {
 		int expected = 31 * 7 + 8;
 		expected = 31 * expected + 10;
 
@@ -307,11 +416,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithByteArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithByteArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((byte[]) null));
 	}
 
-	public void testNullSafeHashCodeWithCharArray() {
+	@Test
+	public void nullSafeHashCodeWithCharArray() {
 		int expected = 31 * 7 + 'a';
 		expected = 31 * expected + 'E';
 
@@ -321,11 +432,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithCharArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithCharArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((char[]) null));
 	}
 
-	public void testNullSafeHashCodeWithDoubleArray() {
+	@Test
+	public void nullSafeHashCodeWithDoubleArray() {
 		long bits = Double.doubleToLongBits(8449.65);
 		int expected = 31 * 7 + (int) (bits ^ (bits >>> 32));
 		bits = Double.doubleToLongBits(9944.923);
@@ -337,11 +450,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithDoubleArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithDoubleArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((double[]) null));
 	}
 
-	public void testNullSafeHashCodeWithFloatArray() {
+	@Test
+	public void nullSafeHashCodeWithFloatArray() {
 		int expected = 31 * 7 + Float.floatToIntBits(9.6f);
 		expected = 31 * expected + Float.floatToIntBits(7.4f);
 
@@ -351,11 +466,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithFloatArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithFloatArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((float[]) null));
 	}
 
-	public void testNullSafeHashCodeWithIntArray() {
+	@Test
+	public void nullSafeHashCodeWithIntArray() {
 		int expected = 31 * 7 + 884;
 		expected = 31 * expected + 340;
 
@@ -365,11 +482,13 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithIntArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithIntArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((int[]) null));
 	}
 
-	public void testNullSafeHashCodeWithLongArray() {
+	@Test
+	public void nullSafeHashCodeWithLongArray() {
 		long lng = 7993l;
 		int expected = 31 * 7 + (int) (lng ^ (lng >>> 32));
 		lng = 84320l;
@@ -381,16 +500,19 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithLongArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithLongArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((long[]) null));
 	}
 
-	public void testNullSafeHashCodeWithObject() {
+	@Test
+	public void nullSafeHashCodeWithObject() {
 		String str = "Luke";
 		assertEquals(str.hashCode(), ObjectUtils.nullSafeHashCode(str));
 	}
 
-	public void testNullSafeHashCodeWithObjectArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectArray() {
 		int expected = 31 * 7 + "Leia".hashCode();
 		expected = 31 * expected + "Han".hashCode();
 
@@ -400,69 +522,81 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithObjectArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithObjectArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((Object[]) null));
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingBooleanArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingBooleanArray() {
 		Object array = new boolean[] {true, false};
 		int expected = ObjectUtils.nullSafeHashCode((boolean[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingByteArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingByteArray() {
 		Object array = new byte[] {6, 39};
 		int expected = ObjectUtils.nullSafeHashCode((byte[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingCharArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingCharArray() {
 		Object array = new char[] {'l', 'M'};
 		int expected = ObjectUtils.nullSafeHashCode((char[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingDoubleArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingDoubleArray() {
 		Object array = new double[] {68930.993, 9022.009};
 		int expected = ObjectUtils.nullSafeHashCode((double[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingFloatArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingFloatArray() {
 		Object array = new float[] {9.9f, 9.54f};
 		int expected = ObjectUtils.nullSafeHashCode((float[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingIntArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingIntArray() {
 		Object array = new int[] {89, 32};
 		int expected = ObjectUtils.nullSafeHashCode((int[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingLongArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingLongArray() {
 		Object array = new long[] {4389, 320};
 		int expected = ObjectUtils.nullSafeHashCode((long[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingObjectArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingObjectArray() {
 		Object array = new Object[] {"Luke", "Anakin"};
 		int expected = ObjectUtils.nullSafeHashCode((Object[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectBeingShortArray() {
+	@Test
+	public void nullSafeHashCodeWithObjectBeingShortArray() {
 		Object array = new short[] {5, 3};
 		int expected = ObjectUtils.nullSafeHashCode((short[]) array);
 		assertEqualHashCodes(expected, array);
 	}
 
-	public void testNullSafeHashCodeWithObjectEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithObjectEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((Object) null));
 	}
 
-	public void testNullSafeHashCodeWithShortArray() {
+	@Test
+	public void nullSafeHashCodeWithShortArray() {
 		int expected = 31 * 7 + 70;
 		expected = 31 * expected + 8;
 
@@ -472,157 +606,188 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 	}
 
-	public void testNullSafeHashCodeWithShortArrayEqualToNull() {
+	@Test
+	public void nullSafeHashCodeWithShortArrayEqualToNull() {
 		assertEquals(0, ObjectUtils.nullSafeHashCode((short[]) null));
 	}
 
-	public void testNullSafeToStringWithBooleanArray() {
+	@Test
+	public void nullSafeToStringWithBooleanArray() {
 		boolean[] array = {true, false};
 		assertEquals("{true, false}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithBooleanArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithBooleanArrayBeingEmpty() {
 		boolean[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithBooleanArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithBooleanArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((boolean[]) null));
 	}
 
-	public void testNullSafeToStringWithByteArray() {
+	@Test
+	public void nullSafeToStringWithByteArray() {
 		byte[] array = {5, 8};
 		assertEquals("{5, 8}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithByteArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithByteArrayBeingEmpty() {
 		byte[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithByteArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithByteArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((byte[]) null));
 	}
 
-	public void testNullSafeToStringWithCharArray() {
+	@Test
+	public void nullSafeToStringWithCharArray() {
 		char[] array = {'A', 'B'};
 		assertEquals("{'A', 'B'}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithCharArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithCharArrayBeingEmpty() {
 		char[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithCharArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithCharArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((char[]) null));
 	}
 
-	public void testNullSafeToStringWithDoubleArray() {
+	@Test
+	public void nullSafeToStringWithDoubleArray() {
 		double[] array = {8594.93, 8594023.95};
 		assertEquals("{8594.93, 8594023.95}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithDoubleArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithDoubleArrayBeingEmpty() {
 		double[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithDoubleArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithDoubleArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((double[]) null));
 	}
 
-	public void testNullSafeToStringWithFloatArray() {
+	@Test
+	public void nullSafeToStringWithFloatArray() {
 		float[] array = {8.6f, 43.8f};
 		assertEquals("{8.6, 43.8}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithFloatArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithFloatArrayBeingEmpty() {
 		float[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithFloatArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithFloatArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((float[]) null));
 	}
 
-	public void testNullSafeToStringWithIntArray() {
+	@Test
+	public void nullSafeToStringWithIntArray() {
 		int[] array = {9, 64};
 		assertEquals("{9, 64}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithIntArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithIntArrayBeingEmpty() {
 		int[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithIntArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithIntArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((int[]) null));
 	}
 
-	public void testNullSafeToStringWithLongArray() {
+	@Test
+	public void nullSafeToStringWithLongArray() {
 		long[] array = {434l, 23423l};
 		assertEquals("{434, 23423}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithLongArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithLongArrayBeingEmpty() {
 		long[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithLongArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithLongArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((long[]) null));
 	}
 
-	public void testNullSafeToStringWithPlainOldString() {
+	@Test
+	public void nullSafeToStringWithPlainOldString() {
 		assertEquals("I shoh love tha taste of mangoes", ObjectUtils.nullSafeToString("I shoh love tha taste of mangoes"));
 	}
 
-	public void testNullSafeToStringWithObjectArray() {
-		Object[] array = {"Han", new Long(43)};
+	@Test
+	public void nullSafeToStringWithObjectArray() {
+		Object[] array = {"Han", Long.valueOf(43)};
 		assertEquals("{Han, 43}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithObjectArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithObjectArrayBeingEmpty() {
 		Object[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithObjectArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithObjectArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((Object[]) null));
 	}
 
-	public void testNullSafeToStringWithShortArray() {
+	@Test
+	public void nullSafeToStringWithShortArray() {
 		short[] array = {7, 9};
 		assertEquals("{7, 9}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithShortArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithShortArrayBeingEmpty() {
 		short[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithShortArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithShortArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((short[]) null));
 	}
 
-	public void testNullSafeToStringWithStringArray() {
+	@Test
+	public void nullSafeToStringWithStringArray() {
 		String[] array = {"Luke", "Anakin"};
 		assertEquals("{Luke, Anakin}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithStringArrayBeingEmpty() {
+	@Test
+	public void nullSafeToStringWithStringArrayBeingEmpty() {
 		String[] array = {};
 		assertEquals("{}", ObjectUtils.nullSafeToString(array));
 	}
 
-	public void testNullSafeToStringWithStringArrayEqualToNull() {
+	@Test
+	public void nullSafeToStringWithStringArrayEqualToNull() {
 		assertEquals("null", ObjectUtils.nullSafeToString((String[]) null));
 	}
 
-	enum Tropes { FOO, BAR, baz };
-
-	public void testContainsConstant() {
+	@Test
+	public void containsConstant() {
 		assertThat(ObjectUtils.containsConstant(Tropes.values(), "FOO"), is(true));
 		assertThat(ObjectUtils.containsConstant(Tropes.values(), "foo"), is(true));
 		assertThat(ObjectUtils.containsConstant(Tropes.values(), "BaR"), is(true));
@@ -636,17 +801,14 @@ public final class ObjectUtilsTests extends TestCase {
 		assertThat(ObjectUtils.containsConstant(Tropes.values(), "foo", true), is(false));
 	}
 
-	public void testCaseInsensitiveValueOf() {
+	@Test
+	public void caseInsensitiveValueOf() {
 		assertThat(ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "foo"), is(Tropes.FOO));
 		assertThat(ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "BAR"), is(Tropes.BAR));
-		try {
-			ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "bogus");
-			fail("expected IllegalArgumentException");
-		} catch (IllegalArgumentException ex) {
-			assertThat(ex.getMessage(),
-					is("constant [bogus] does not exist in enum type " +
-					"org.springframework.util.ObjectUtilsTests$Tropes"));
-		}
+
+		exception.expect(IllegalArgumentException.class);
+		exception.expectMessage(is("constant [bogus] does not exist in enum type org.springframework.util.ObjectUtilsTests$Tropes"));
+		ObjectUtils.caseInsensitiveValueOf(Tropes.values(), "bogus");
 	}
 
 	private void assertEqualHashCodes(int expected, Object array) {
@@ -654,5 +816,8 @@ public final class ObjectUtilsTests extends TestCase {
 		assertEquals(expected, actual);
 		assertTrue(array.hashCode() != actual);
 	}
+
+
+	enum Tropes { FOO, BAR, baz }
 
 }
